# JetSpectraEseFW

./: .gitignore  CMakeLists.txt  draw_phiIntegrated_q2.cxx  draw_planes.cxx  eff_procc.cxx  procc.cxx  procc_data.cxx  procc_mc.cxx
Core/: CMakeLists.txt  JEFW.cxx  JEFW.h  JEUtility.cxx  JEUtility.h  JEfficiency.cxx  JEfficiency.h
Core/include/: CoreLinkDef.hpp  JEFW.hpp  JEUtility.hpp  JEfficiency.hpp
Core/src/: CMakeLists.txt  JEFW.cxx  JEUtility.cxx  JEfficiency.cxx
JAnalysis/: CMakeLists.txt  eventPlaneResolution.cxx  plotDataNoCorrected.cxx  plotDataNoCorrection.cxx  plotDataRaw.cxx  plotDataRawCombined.cxx  ptSpectraRawNoEse.cxx  various.cxx
JetCore/: CMakeLists.txt
JetCore/include/: JEFW.hpp  JESys.hpp  JEWrapper.hpp  JEfficiency.hpp
JetCore/src/: CMakeLists.txt  JEFW.cxx  JESys.cxx
Plot/: draw_phiIntegrated_q2.cxx  draw_planes.cxx  draw_planes_unfolded_q2.cxx  draw_planes_unfolded_q2Inc.cxx  qa.cxx  response.cxx  v2_draw.cxx
QSelection/: drawSpline.cxx  writeFFitWeightsCCDB.cxx
Tasks/: CMakeLists.txt  data_proc.cxx  data_procc.cxx  eff_proc.cxx  eff_procc.cxx  eventPlaneResolution.cxx  mc_procc.cxx  procc_data.cxx  procc_mc.cxx  unfold_proc.cxx  unfold_procc.cxx  v2_proc.cxx  v2_procc.cxx
analysis/: CMakeLists.txt
analysis/src/JAnalysis/: eventPlaneCorrectionSteps.cxx  eventPlaneResolution.cxx  plotDataRaw.cxx  plotDataRawCombined.cxx
analysis/src/Systematics/: CMakeLists.txt  sysEPFT0C.cxx  sysEv.cxx
analysis/src/Tasks/: background.cxx  compare-offline-online.cxx  compare_spectra.cxx  data_proc.cxx
src/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/include/: CoreLinkDef.hpp  JESys.hpp  JEUtility.hpp  JEWrapper.hpp
src/Core/src/: CMakeLists.txt  JEUtility.cxx  JEWrapper.cxx  JEfficiency.cxx
src/JAnalysis/: CMakeLists.txt  eventPlaneResolution.cxx  jetv2.cxx  plotDataRaw.cxx  plotDataRawCombined_new.cxx  ptSpectraRawNoEse.cxx  rootStyle.hpp  various.cxx
src/Systematics/: CMakeLists.txt  sysEPFT0C.cxx  sysEv.cxx
src/Tasks/: CMakeLists.txt  background.cxx  compare-rhophi.cxx  eff_proc.cxx  makeQA.cxx  unfold_proc.cxx
